# simple-app

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose-airflow.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  script_run_tests.sh
.github/workflows/: release-please.yml  workflow.yml  workflows.yaml
app/: Dockerfile  Makefile  app.py  database_functions.py  db_functions.py  exceptions.py  main.py  validation_models.py
app/db/: insert_data.sql  inserte_table.sql  save_data.py
app/templates/: data.html  forms.html
dags/: weather_temperature.py
db/: 00_create_test_schema.sql  01_create_table.sql  02_inserte_table.sql  create_table.sql
tests/: conftest.py  test_app_account.py  test_app_endpoints.py  test_create_accounts.py  test_example_get_home.py  test_functional_accounts_db.py  test_functional_weather_db.py  test_get_accounts.py  test_get_home.py  test_save_weather_data.py  test_select_db.py  test_write_db.py
