[tool.poetry]
name = "simple-app"
version = "0.1.0"
description = ""
authors = ["Hir4 <hirayama.rafael517@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.4.2"
pytest-mock = "3.11.1"
psycopg = "3.1.12"
psycopg-binary = "3.1.12"
psycopg-pool = "3.1.8"
fastapi = "0.103.2"
uvicorn = "0.23.2"
httpx = "0.25.0"
black = "23.12.1"
ruff = "0.0.292"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",
  "F",
  "I",
]
ignore = ["E501"]
line-length = 88
target-version = "py310"
fix = true